# conflicting-package-heights

./: BUILD.bazel  WORKSPACE  deps.bzl  go.mod  go.sum
api/service/echo/: BUILD.bazel  echo.proto
cmd/server/: BUILD.bazel  main.go
pkg/server/: BUILD.bazel  server.go
